fixing contrast

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@
     transition: all 0.4s ease-in-out;
   }
   .controls .active-btn i {
-    color: var(--color-white);
+    color: var(--color-black);
   }
   
   .theme-btn {
